Verison 0.9.8-git - NA
- MAJOR: webapp usage now can be used with a token instead of the password (joan)
- MAJOR: change the login method to use PHP session (anton)
- MAJOR: change the way to show $error_string, now using PHP session (anton)
- MAJOR: expand webservice with new error codes (aseques)
- remove option for multilogin, it will always be multi-login since using session (anton)
- remove old page_welcome pages, now in inc/user/page_welcome.php and its configurable (anton)
- add language for themes play (aseques)
- add bat files to start and stop gammu, playsmsd, sendsmsd in windows (anton)
- add config for playsmsd and sendsmsd in windows, playsms.bat (anton)
- add BC keyword like handler to feature SMS subscribe (anton)
- add lib/fn_init.php to hold init functions, small re-structure in init.php (anton)
- add instructions to enable fail2ban (joan)
- update language id_ID (hangbreaker)
- update catalan language (aseques)
- update user's email and mobile should be unique (anton)
- update directory structure in package (anton)
- update maximum phonebook import is 400 contacts per upload (anton)
- update terms in log to levels instead of words (anton)
- fix language tools, use --clear-fuzzy and several other fixes (anton)
- fix #23 flash not working, wrong variable $msg_type should be $sms_type (p-walker)
- fix phonebook_exim.php export and import should check uid (anton)

Version 0.9.7.1 - 120905
- MAJOR: fix security bug, non-admin can send SMS with other account from sendfromfile (anton)

Version 0.9.7 - 120903
- MAJOR: all outgoing SMS are to be sent to a queue in database first and then the queue will be
         processed either directly or through new daemon sendsmsd (anton)
- MAJOR: raw/unmodified SMS is now passed to plugins through hook setsmsincomingaction() (anton)
- MAJOR: webservice has been modified in service related to sending SMS, please read (anton)
- MAJOR: like lib/dba.php, lib/fn_auth.php now also loaded from init.php (anton)