@@ -9,7 +9,7 @@ Steps to upgrade:
 3. Install this playSMS version (or extract it in the same path as old playSMS)
 4. Copy old config.php from old playSMS to new playSMS config.php
 5. Update database by inserting SQL patch file:
-    db/playsms-upgrade-096-to-097.sql
+    db/playsms-upgrade-0971-to-098.sql
 
     for example:
     # cd [this playSMS package directory]/db
